add swagger documentation for books
